	init_alloc().
	(cpu_control, interrupt_processor, cpu_start, start_other_cpus): New
	functions.
	* i386/i386/mp_desc.h: Include <i386at/idt.h> instead of "idt.h"
	* i386/i386/cswitch.S: Use EXT(interrupt_stack) instead of
	_interrupt_stack.
	* i386/i386/i386asm.sym (MP_GDT, MP_IDT): Remove macros.
	* i386/i386/lock.h: Don't include_next "lock.h".

2007-07-08  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* i386/i386/seg.h (SZ_64): New macro.
	* i386/i386/user_ldt.c (selector_check, i386_set_gdt): Check
	user-provided descriptor against SZ_64.

2007-07-04  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* i386/intel/pmap.c (pmap_enter): Use INTEL_PTE_NCACHE|INTEL_PTE_WTHRU
	when cpu >= 486 and physical address is after memory end.

2007-06-23  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* i386/i386/trap.c (user_trap): Read faulting linear address before
	using it.

2007-06-02  Thomas Schwinge  <tschwinge@gnu.org>

	* Makerules.mig.am: New file, factored out of code of...
	* Makefrag.am: ... this file and...
	* Makerules.am: ... this file.
	* i386/Makefrag.am: Update comment.

	* Makefile.am (MIGFLAGS): Remove.
	(MIGCOM): Add ``-n''.
	* Makerules.am: Adapt to that.

2007-05-09  Thomas Schwinge  <tschwinge@gnu.org>

	* include/mach/mach_types.defs (userprefix, serverprefix): Set, if
	requested (by setting USERPREFIX respective SERVERPREFIX).

2007-05-08  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* i386/i386/fpu.c (fpu_set_state): Set fp_valid to TRUE.  Free the
	unused ifps.

2007-05-07  Thomas Schwinge  <tschwinge@gnu.org>

	[bug #15295 --- ``Mach lets processes write to I/O ports'']

	* i386/Makefrag.am (libkernel_a_SOURCES): Add `i386/i386/io_perm.c',
	`i386/i386/io_perm.h', `i386/i386/machine_task.c', `i386/i386/task.h'
	and remove `i386/i386/io_port.h', `i386/i386/iopb.c',
	`i386/i386/iopb.h'.

	* i386/i386/io_port.h: Remove file.
	* i386/i386at/kd.c: Don't include <i386/io_port.h>.