@@ -34,6 +34,11 @@
 #undef  CONFIG_M686
 #endif
 
+#if NCPUS > 1
+#define CONFIG_SMP 1
+#define __SMP__ 1
+#endif
+
 /*
  * Floppy, IDE, and other block devices
  */
